# kmeans-color-studio

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  K_Means_Clustering.py  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
assets/demo/: PROVENANCE.md  cluster-analysis-lab.json  palette-k6.css  palette-k6.json  palette-lab-auto.json
assets/demo/classical-diagnostics/: diagnostics.json
src/kmeans_color_studio/: __init__.py  analysis.py  cli.py  core.py  diagnostics.py
tests/: test_core.py
