[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kmeans-color-studio"
version = "1.0.0"
description = "Deterministic image color quantization and palette extraction with OpenCV K-Means"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "opencv-python-headless>=4.8,<5",
]

[project.optional-dependencies]
web = ["fastapi>=0.115,<1", "python-multipart>=0.0.9", "uvicorn[standard]>=0.30,<1"]

[project.scripts]
kmeans-color-studio = "kmeans_color_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
