[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kmeans-color-studio"
version = "1.1.0"
description = "Deterministic image color quantization and palette extraction with OpenCV K-Means"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Sabahattin Akal"}]
keywords = ["computer-vision", "kmeans", "color-quantization", "opencv", "palette"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy>=1.24,<3",
  "opencv-python-headless>=4.8,<6",
]

[project.optional-dependencies]
web = ["fastapi>=0.115,<1", "python-multipart>=0.0.9", "uvicorn[standard]>=0.30,<1"]

[project.scripts]
kmeans-color-studio = "kmeans_color_studio.cli:main"

[project.urls]
Homepage = "https://github.com/SabahattinAkal/K-Means_Clustering_Uygulama"
Issues = "https://github.com/SabahattinAkal/K-Means_Clustering_Uygulama/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
